# python-lyrics-transcriber

./: .gitignore  Dockerfile  LICENSE  README.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_IMPROVEMENT_PLAN.md  analyze_corrections.py  example-llm-chatcompletion-response.py  llm_br_parsing_instructions.txt  pyproject.toml  requirements.txt  test-fixing-plan.md
.cursor/rules/: specify-rules.mdc
.github/: removetriton.patch  removetritonandpyaudio.patch
.github/workflows/: deploy-analyzer.yml  deploy.yml  integration-test.yml  publish-transcriber.yml  publish.yml  test-and-publish.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
analyze_corrections/: analyze_corrections.py  template.html
integration_tests/: conftest.py  test_correction_workflow.py  test_end_to_end.py
lyrics-analyzer/: package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js
lyrics-analyzer/src/: App.tsx  api.ts  types.ts
lyrics-analyzer/src/components/: DebugPanel.tsx  DetailsModal.tsx  FileUpload.tsx  LyricsAnalyzer.tsx  ReferenceView.tsx  TranscriptionView.tsx  constants.ts  styles.ts
lyrics_transcriber/: __init__.py  audioshake_transcriber.py  corrector.py  example-llm-response.json  llm_correction_instructions.txt  llm_correction_instructions_2.txt  llm_correction_instructions_3.txt  transcriber.py  types.py
lyrics_transcriber/cli/: cli_main.py  main.py
lyrics_transcriber/core/: config.py  controller.py  corrector.py  fetcher.py
lyrics_transcriber/correction/: anchor_sequence.py  base_strategy.py  corrector.py  models.py  operations.py  phrase_analyzer.py  strategy_diff.py  strategy_smart.py  text_analysis.py  text_utils.py
lyrics_transcriber/correction/agentic/: __init__.py  adapter.py  agent.py  router.py
lyrics_transcriber/correction/handlers/: __init__.py  base.py  combined.py  exact_match.py  extend_anchor.py  extra_words.py  human.py  levenshtein.py  llm.py  llm_providers.py  metaphone.py  multi_levenshtein.py  no_space_punct_match.py  relaxed_word_count_match.py  repeat.py  semantic.py  sound_alike.py  syllables_match.py  word_count_match.py  word_operations.py
lyrics_transcriber/frontend/: REPLACE_ALL_FUNCTIONALITY.md  __init__.py  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  update_version.js  vite.config.js  vite.config.ts
lyrics_transcriber/frontend/scripts/: validate-schemas.js
lyrics_transcriber/frontend/src/: App.tsx  api.ts  main.tsx  theme.ts  types.ts  validation.test.ts  validation.ts
lyrics_transcriber/frontend/web_assets/: index.html
lyrics_transcriber/llm_prompts/: llm_lyrics_correction_prompt.txt  llm_prompt_lyrics_correction_andrew_handwritten_20231118.txt  llm_prompt_lyrics_correction_gpt_optimised_20231119.txt  llm_prompt_lyrics_matching_andrew_handwritten_20231118.txt  promptfooconfig.yaml
lyrics_transcriber/llm_prompts/test_data/: ABBA-UnderAttack-Genius.txt
lyrics_transcriber/lyrics/: base_lyrics_provider.py  file_provider.py  genius.py  musixmatch.py  spotify.py  user_input_provider.py
lyrics_transcriber/output/: cdg.py  generator.py  lrc_to_cdg.py  lyrics_file.py  plain_text.py  segment_resizer.py  subtitles.py  video.py
lyrics_transcriber/output/ass/: __init__.py  ass.py  ass_specs.txt  config.py  constants.py  event.py  formatters.py  lyrics_line.py  lyrics_models.py  lyrics_screen.py  screens_to_ass.py  section_detector.py  section_screen.py  style.py
lyrics_transcriber/output/cdgmaker/: cdg.py  composer.py  composerjosiah.py  config.py  pack.py  render.py  utils.py
lyrics_transcriber/review/: __init__.py  server.py
lyrics_transcriber/storage/: dropbox.py  tokens.py
lyrics_transcriber/transcribers/: audioshake.py  base.py  base_transcriber.py  whisper.py
lyrics_transcriber/tuul_utils/: ass.py  subtitles.py  timing_data.py
lyrics_transcriber/utils/: ass.py  cli.py  subtitles.py  word_utils.py
scripts/: build_frontend.sh  dropbox_tokens.py  render_custom_bg.sh  render_greenscreen.sh  render_preview.sh
specs/001-agentic-ai-corrector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  technical-guidance.md
specs/001-agentic-ai-corrector/contracts/: agentic_correction_api.yaml
tests/: conftest.py  integration_test.py  test_helpers.py
tests/cli/: test_cli_main.py  test_main.py
tests/contract/: README.md  __init__.py  test_agentic_correction_api.py  test_end_to_end_data_pipeline.py  test_frontend_schemas.py
tests/core/: test_controller.py  test_corrector.py  test_fetcher.py
tests/correction/: test_anchor_sequence.py  test_anchor_sequence_1.py  test_anchor_sequence_2.py  test_corrector.py  test_phrase_analyzer.py  test_strategy_diff.py  test_strategy_smart.py  test_text_analysis.py  test_text_utils.py
tests/correction/handlers/: test_extra_words.py  (+4 more)
tests/integration/: conftest.py  test_basic_ai_workflow.py  test_correction_workflow.py  test_end_to_end.py  test_fallback_reliability.py  test_human_feedback_loop.py  test_multi_model_comparison.py  test_output_format_compatibility.py  test_performance_observability.py
tests/lyrics/: test_base_lyrics_provider.py  test_genius_provider.py  test_spotify_provider.py
tests/manual/: __init__.py  test_musixmatch_provider.py  test_rapidapi_comparison.py  test_spotify_rapidapi_comparison.py
tests/output/: test_generator.py  test_lyrics_file.py  test_plain_text.py  test_segment_resizer.py  test_subtitles.py  test_video.py
tests/performance/: test_accuracy_benchmarks.py  test_timing_benchmarks.py  test_wer_cer.py
tests/regression/: __init__.py  test_anchor_sequence_format_compatibility.py
tests/storage/: test_dropbox.py
tests/transcribers/: test_audioshake.py  test_base.py  test_base_transcriber.py  test_whisper.py
(+143 files in other folders)
